--- a/0.Info.ipynb
+++ b/0.Info.ipynb
@@ -95,20 +95,13 @@
     "import numpy as np\n",
     "import math\n",
     "import json\n",
-    "% matplotlib inline\n",
+    "# % matplotlib inline\n",
     "\n",
     "# read in the json files\n",
     "portfolio = pd.read_json('data/portfolio.json', orient='records', lines=True)\n",
     "profile = pd.read_json('data/profile.json', orient='records', lines=True)\n",
     "transcript = pd.read_json('data/transcript.json', orient='records', lines=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -127,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
