--- a/1.EDA_notebook.ipynb
+++ b/1.EDA_notebook.ipynb
@@ -3975,6 +3975,7 @@
     "- There is a clear outlier/bucket value in age (118) that seems unlikely and needs to be handled\n",
     "- ID values are unique which is good\n",
     "- There are missing values in income that needs to be handled \n",
+    "- The percentage missing income and gender is the same - may be same records?\n",
     "- There is a high correlation between income and gender\n",
     "- No duplicate rows"
    ]
