Added notebook description

--- a/1.EDA_notebook.ipynb
+++ b/1.EDA_notebook.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EDA"
+    "# EDA\n",
+    "General exploration of our data to see if quick issues or patterns can be picked up for each of our datasets."
    ]
   },
   {
