--- a/0.Info.ipynb
+++ b/0.Info.ipynb
@@ -72,35 +72,7 @@
     "* time (int) - time in hours since start of test. The data begins at time t=0\n",
     "* value - (dict of strings) - either an offer id or transaction amount depending on the record\n",
     "\n",
-    "**Note:** If you are using the workspace, you will need to go to the terminal and run the command `conda update pandas` before reading in the files. This is because the version of pandas in the workspace cannot read in the transcript.json file correctly, but the newest version of pandas can. You can access the termnal from the orange icon in the top left of this notebook.  \n",
-    "\n",
-    "You can see how to access the terminal and how the install works using the two images below.  First you need to access the terminal:\n",
-    "\n",
-    "<img src=\"pic1.png\"/>\n",
-    "\n",
-    "Then you will want to run the above command:\n",
-    "\n",
-    "<img src=\"pic2.png\"/>\n",
-    "\n",
-    "Finally, when you enter back into the notebook (use the jupyter icon again), you should be able to run the below cell without any errors."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import math\n",
-    "import json\n",
-    "# % matplotlib inline\n",
-    "\n",
-    "# read in the json files\n",
-    "portfolio = pd.read_json('data/portfolio.json', orient='records', lines=True)\n",
-    "profile = pd.read_json('data/profile.json', orient='records', lines=True)\n",
-    "transcript = pd.read_json('data/transcript.json', orient='records', lines=True)"
+    "**Note:** If you are using the workspace, you will need to go to the terminal and run the command `conda update pandas` before reading in the files. This is because the version of pandas in the workspace cannot read in the transcript.json file correctly, but the newest version of pandas can. You can access the termnal from the orange icon in the top left of this notebook.  \n"
    ]
   }
  ],
