modeling sandbox code

--- a/analysis/modeling_sandbox.ipynb
+++ b/analysis/modeling_sandbox.ipynb
@@ -451,6 +451,106 @@
     "# plot the feature importance\n",
     "plt.bar([x for x in range(len(importance))], importance)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "\n",
+    "data = offer_complete_df\n",
+    "# assign offer_viewed_and_completed as target column\n",
+    "X,y = data.iloc[:,:-1], data['offer_viewed_and_completed']\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize the XGBoost classifier\n",
+    "xgb_model = xgb.XGBClassifier()\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the testing data\n",
+    "y_pred = xgb_model.predict(X_test)\n",
+    "\n",
+    "# Calculate evaluation metrics\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "auc = roc_auc_score(y_test, y_pred)\n",
+    "\n",
+    "# Print the evaluation metrics\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Calculate the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a heatmap for the confusion matrix\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False)\n",
+    "plt.title(\"Confusion Matrix\")\n",
+    "plt.xlabel(\"Predicted Labels\")\n",
+    "plt.ylabel(\"True Labels\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "# Get feature importance scores from the trained XGBoost model\n",
+    "importance_scores = xgb_model.feature_importances_\n",
+    "\n",
+    "# Get feature names\n",
+    "feature_names = data.iloc[:,:-1].columns\n",
+    "\n",
+    "# Sort feature importance scores and feature names in descending order\n",
+    "sorted_indices = np.argsort(importance_scores)[::-1]\n",
+    "sorted_scores = importance_scores[sorted_indices]\n",
+    "sorted_feature_names = np.array(feature_names)[sorted_indices]\n",
+    "\n",
+    "# Plot feature importance\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.barh(range(len(sorted_scores)), sorted_scores, align='center')\n",
+    "plt.yticks(range(len(sorted_scores)), sorted_feature_names)\n",
+    "plt.xlabel('Feature Importance')\n",
+    "plt.ylabel('Feature')\n",
+    "plt.title('XGBoost Feature Importance')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
