--- a/3.Data_Modeling.ipynb
+++ b/3.Data_Modeling.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -79,37 +79,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>74491</th>\n",
-       "      <td>69.0</td>\n",
-       "      <td>111000.0</td>\n",
-       "      <td>1950.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181700</th>\n",
-       "      <td>43.0</td>\n",
-       "      <td>68000.0</td>\n",
-       "      <td>2026.0</td>\n",
+       "      <th>45253</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>2644.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172098</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>105000.0</td>\n",
+       "      <td>2851.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -117,10 +117,10 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14673</th>\n",
-       "      <td>69.0</td>\n",
-       "      <td>39000.0</td>\n",
-       "      <td>3129.0</td>\n",
+       "      <th>227272</th>\n",
+       "      <td>59.0</td>\n",
+       "      <td>95000.0</td>\n",
+       "      <td>2622.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -141,22 +141,22 @@
       ],
       "text/plain": [
        "         age    income  days_as_member    F    M    O  reward  difficulty  \\\n",
-       "74491   69.0  111000.0          1950.0  0.0  1.0  0.0     3.0         7.0   \n",
-       "181700  43.0   68000.0          2026.0  1.0  0.0  0.0     2.0        10.0   \n",
-       "14673   69.0   39000.0          3129.0  0.0  1.0  0.0     5.0         5.0   \n",
+       "45253   55.0  114000.0          2644.0  1.0  0.0  0.0     2.0        10.0   \n",
+       "172098  68.0  105000.0          2851.0  1.0  0.0  0.0    10.0        10.0   \n",
+       "227272  59.0   95000.0          2622.0  0.0  1.0  0.0     5.0         5.0   \n",
        "\n",
        "        duration  bogo  discount  email  mobile  social  web  \\\n",
-       "74491        7.0   0.0       1.0    1.0     1.0     1.0  1.0   \n",
-       "181700      10.0   0.0       1.0    1.0     1.0     1.0  1.0   \n",
-       "14673        5.0   1.0       0.0    1.0     1.0     1.0  1.0   \n",
+       "45253        7.0   0.0       1.0    1.0     1.0     0.0  1.0   \n",
+       "172098       5.0   1.0       0.0    1.0     1.0     1.0  1.0   \n",
+       "227272       5.0   1.0       0.0    1.0     1.0     1.0  1.0   \n",
        "\n",
        "        offer_viewed_and_completed  \n",
-       "74491                            0  \n",
-       "181700                           1  \n",
-       "14673                            1  "
+       "45253                            0  \n",
+       "172098                           1  \n",
+       "227272                           1  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "(40500, 16)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "Name: offer_viewed_and_completed, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -253,17 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 68.57%\n",
+      "F1-score: 72.87%\n",
       "Precision: 70.07%\n",
       "Recall: 75.91%\n",
-      "F1-score: 72.87%\n"
+      "Accuracy: 68.57%\n"
      ]
     }
    ],
@@ -292,10 +292,19 @@
     "auc = roc_auc_score(y_test, y_pred)\n",
     "\n",
     "# Print the evaluation metrics\n",
-    "print(\"Accuracy:\", f\"{round(accuracy*100,2)}%\")\n",
+    "print(\"F1-score:\", f\"{round(f1*100,2)}%\")\n",
     "print(\"Precision:\", f\"{round(precision*100,2)}%\")\n",
     "print(\"Recall:\", f\"{round(recall*100,2)}%\")\n",
-    "print(\"F1-score:\", f\"{round(f1*100,2)}%\")\n"
+    "print(\"Accuracy:\", f\"{round(accuracy*100,2)}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add the metrics to a datafram"
    ]
   },
   {
@@ -314,17 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 68.62%\n",
+      "F1-score: 72.96%\n",
       "Precision: 70.05%\n",
       "Recall: 76.12%\n",
-      "F1-score: 72.96%\n"
+      "Accuracy: 68.62%\n"
      ]
     }
    ],
@@ -364,10 +373,10 @@
     "auc = roc_auc_score(y_test, y_pred)\n",
     "\n",
     "# Print the evaluation metrics\n",
-    "print(\"Accuracy:\", f\"{round(accuracy*100,2)}%\")\n",
+    "print(\"F1-score:\", f\"{round(f1*100,2)}%\")\n",
     "print(\"Precision:\", f\"{round(precision*100,2)}%\")\n",
     "print(\"Recall:\", f\"{round(recall*100,2)}%\")\n",
-    "print(\"F1-score:\", f\"{round(f1*100,2)}%\")\n"
+    "print(\"Accuracy:\", f\"{round(accuracy*100,2)}%\")"
    ]
   },
   {
@@ -390,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -479,14 +488,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>77524</th>\n",
+       "      <th>189126</th>\n",
        "      <td>transaction</td>\n",
-       "      <td>192</td>\n",
-       "      <td>8.22</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>c7c44b6fe09945a0bdfb65e1f9807552</td>\n",
-       "      <td>78000.0</td>\n",
-       "      <td>2085.0</td>\n",
+       "      <td>462</td>\n",
+       "      <td>8.39</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>4c0b938c4e994b168f0062d7dbb79796</td>\n",
+       "      <td>59000.0</td>\n",
+       "      <td>2897.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -495,14 +504,30 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143878</th>\n",
+       "      <th>43604</th>\n",
        "      <td>transaction</td>\n",
-       "      <td>384</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>a9de7a1151d44d8fb367722103707cdb</td>\n",
-       "      <td>33000.0</td>\n",
-       "      <td>2271.0</td>\n",
+       "      <td>108</td>\n",
+       "      <td>26.62</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>5e4c04da5ccb48beab8b5644c14dabb2</td>\n",
+       "      <td>115000.0</td>\n",
+       "      <td>2835.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80934</th>\n",
+       "      <td>transaction</td>\n",
+       "      <td>198</td>\n",
+       "      <td>25.94</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>5cb65af515664bb0b39cdaa089244dc7</td>\n",
+       "      <td>98000.0</td>\n",
+       "      <td>2612.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -511,30 +536,14 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>295009</th>\n",
-       "      <td>transaction</td>\n",
-       "      <td>666</td>\n",
-       "      <td>22.82</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>69e91f44f04e47c9856b00d77c7736f4</td>\n",
-       "      <td>78000.0</td>\n",
-       "      <td>2413.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46463</th>\n",
+       "      <th>46338</th>\n",
        "      <td>transaction</td>\n",
        "      <td>120</td>\n",
-       "      <td>34.63</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>3d78362d314b43179af19945cfba03db</td>\n",
-       "      <td>89000.0</td>\n",
-       "      <td>2121.0</td>\n",
+       "      <td>8.13</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>6bb901d063a64c779320265b2aaeaee9</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>2094.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -543,16 +552,16 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>267930</th>\n",
+       "      <th>43003</th>\n",
        "      <td>transaction</td>\n",
-       "      <td>588</td>\n",
-       "      <td>8.11</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>759ec3a510e84d9598cf238f719dbda5</td>\n",
-       "      <td>37000.0</td>\n",
-       "      <td>2493.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>13.46</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>4e9ba44fd1f54cfea60e2ef903c71b7f</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>2786.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -564,21 +573,21 @@
       ],
       "text/plain": [
        "              event  time  amount   age                           user_id  \\\n",
-       "77524   transaction   192    8.22  73.0  c7c44b6fe09945a0bdfb65e1f9807552   \n",
-       "143878  transaction   384    0.20  66.0  a9de7a1151d44d8fb367722103707cdb   \n",
-       "295009  transaction   666   22.82  58.0  69e91f44f04e47c9856b00d77c7736f4   \n",
-       "46463   transaction   120   34.63  53.0  3d78362d314b43179af19945cfba03db   \n",
-       "267930  transaction   588    8.11  55.0  759ec3a510e84d9598cf238f719dbda5   \n",
+       "189126  transaction   462    8.39  89.0  4c0b938c4e994b168f0062d7dbb79796   \n",
+       "43604   transaction   108   26.62  83.0  5e4c04da5ccb48beab8b5644c14dabb2   \n",
+       "80934   transaction   198   25.94  59.0  5cb65af515664bb0b39cdaa089244dc7   \n",
+       "46338   transaction   120    8.13  40.0  6bb901d063a64c779320265b2aaeaee9   \n",
+       "43003   transaction   102   13.46  25.0  4e9ba44fd1f54cfea60e2ef903c71b7f   \n",
        "\n",
-       "         income  days_as_member    F    M    O  bogo  discount  informational  \n",
-       "77524   78000.0          2085.0  1.0  0.0  0.0   NaN       NaN            NaN  \n",
-       "143878  33000.0          2271.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
-       "295009  78000.0          2413.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
-       "46463   89000.0          2121.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
-       "267930  37000.0          2493.0  0.0  1.0  0.0   NaN       NaN            NaN  "
+       "          income  days_as_member    F    M    O  bogo  discount  informational  \n",
+       "189126   59000.0          2897.0  1.0  0.0  0.0   NaN       NaN            NaN  \n",
+       "43604   115000.0          2835.0  1.0  0.0  0.0   NaN       NaN            NaN  \n",
+       "80934    98000.0          2612.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
+       "46338    72000.0          2094.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
+       "43003    70000.0          2786.0  1.0  0.0  0.0   NaN       NaN            NaN  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +689,7 @@
        "informational        NaN"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +750,7 @@
        "      <td>26.0</td>\n",
        "      <td>27573d3ebc154a48a9cd245ae16b71a2</td>\n",
        "      <td>34000.0</td>\n",
-       "      <td>1970.0</td>\n",
+       "      <td>1971.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -757,7 +766,7 @@
        "      <td>26.0</td>\n",
        "      <td>27573d3ebc154a48a9cd245ae16b71a2</td>\n",
        "      <td>34000.0</td>\n",
-       "      <td>1970.0</td>\n",
+       "      <td>1971.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -773,7 +782,7 @@
        "      <td>26.0</td>\n",
        "      <td>27573d3ebc154a48a9cd245ae16b71a2</td>\n",
        "      <td>34000.0</td>\n",
-       "      <td>1970.0</td>\n",
+       "      <td>1971.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -789,7 +798,7 @@
        "      <td>26.0</td>\n",
        "      <td>27573d3ebc154a48a9cd245ae16b71a2</td>\n",
        "      <td>34000.0</td>\n",
-       "      <td>1970.0</td>\n",
+       "      <td>1971.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -809,13 +818,13 @@
        "282668  transaction   624    2.31  26.0  27573d3ebc154a48a9cd245ae16b71a2   \n",
        "\n",
        "         income  days_as_member    F    M    O  bogo  discount  informational  \n",
-       "38957   34000.0          1970.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
-       "107542  34000.0          1970.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
-       "110383  34000.0          1970.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
-       "282668  34000.0          1970.0  0.0  1.0  0.0   NaN       NaN            NaN  "
+       "38957   34000.0          1971.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
+       "107542  34000.0          1971.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
+       "110383  34000.0          1971.0  0.0  1.0  0.0   NaN       NaN            NaN  \n",
+       "282668  34000.0          1971.0  0.0  1.0  0.0   NaN       NaN            NaN  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +902,7 @@
        "4  003d66b6608740288d6cc97a6903f4f0   48.34"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
